# gimpsep-team-11

./: CMakeLists.txt  main.cpp  package-lock.json
src/: CMakeCache.txt  CMakeLists.txt  Image.cpp  Image.h  ImageManager.cpp  ImageManager.h  Makefile  cmake_install.cmake  main.cpp
src/image_editor/: ImageEditor.cpp  ImageEditor.h
src/include/: Image.h  ImageEditor.h  ImageManager.h  Menu.h
src/menu/: Menu.cpp  Menu.h
src/src/: Image.cpp  ImageEditor.cpp  ImageManager.cpp  Menu.cpp
